2001-09-04  Lauris Kaplinski  <lauris@ximian.com>

	* src/document.c (sp_document_add_resource): Implemented simple
	named resource lists
	(sp_document_remove_resource): Ditto
	(sp_document_get_resource_list): Ditto

2001-09-03  Lauris Kaplinski  <lauris@ximian.com>

	* src/sp-gradient.c: Added middle SPGradient class and morphed
	LinearGradient accordingly

	* src/sp-gradient.h: Added middle SPGradient Class

	* src/forward.h: Declare stops and gradients here

	* src/dialogs/gradient-vector.c: New file

	* src/dialogs/gradient-vector.h: New file

	* src/bonobo/embeddable-document.c (sp_embeddable_document_ps_save):
	Kill warning

	* src/select-context.c: Kill warning

2001-08-31  Lauris Kaplinski  <lauris@ximian.com>

	* src/forward.h: typedef SPDefs[Class] here

	* src/sp-root.h: Added pointer to root-level <defs> node

	* src/sp-gradient.c (sp_stop_get_type): Fixed type on type init

2001-08-30  Lauris Kaplinski  <lauris@ximian.com>

	* src/document.c (sp_document_new): Use fill-opacity 0.5, not 50%

2001-08-21  Lauris Kaplinski  <lauris@ximian.com>

	* src/dialogs/fill-style.c: Implement CMYK/RGB colorspace switching

	* src/widgets/sp-color-selector.c: Implement CMYK read/set methods

	* src/widgets/sp-color-slider.c (sp_color_slider_adjustment_value_changed): Set
	local value, even if arrow is not visible

	* src/color.c: New file

	* src/color.h: New file

	* src/sp-item.c (sp_item_read_attr): Check for "fill-cmyk"

	* src/style.c (sp_style_read_from_object): Parse "fill-cmyk" (quick hack)

2001-08-20  Lauris Kaplinski  <lauris@ximian.com>

	* src/svg/svg-path.c (svg_parse_path_data): Kill warning

	* src/widgets/sp-color-selector.c: New file & class

	* src/widgets/sp-color-slider.c: New file & class

	* src/sp-object.c (sp_object_style_changed): New virtual method

2001-08-13  Lauris Kaplinski  <lauris@ximian.com>

	* src/selection-chemistry.c (sp_selection_copy): Use prepend/reverse
	(sp_item_compare_order): New method